--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -29,6 +29,9 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:contentDescription="Add"
+        app:srcCompat="@drawable/ic_add"/>
+<!--    app:backgroundTint="@color/your_color"-->
+<!--    app:srcCompat="@android:drawable/ic_dialog_email"-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
