--- a/app/src/main/res/layout/dialog_register_task.xml
+++ b/app/src/main/res/layout/dialog_register_task.xml
@@ -32,13 +32,19 @@
             <EditText
                 android:id="@+id/input_task_detail"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:minHeight="48dp"
                 android:padding="12dp"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:hint="タスク詳細を入力" />
+                android:hint="タスク詳細を入力"
+                android:lines="5"
+                android:maxLines="5"
+                android:gravity="top|start"
+                android:scrollbars="vertical"
+                android:overScrollMode="always"
+                />
             <TextView android:text="3. タスク実施予定日"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
