--- a/app/src/main/res/layout/item_task_header.xml
+++ b/app/src/main/res/layout/item_task_header.xml
@@ -5,5 +5,5 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:textSize="18sp"
-    android:textColor="#000000"
     android:textStyle="bold" />
+<!--    android:textColor="#000000"-->
