--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorDateTimeButton">@color/gray_200</item>
+        <item name="colorDateTimeText">@color/gray_700</item>
     </style>
 
     <style name="Theme.TaskManagement.NoActionBar">
