--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,25 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_schedule">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_schedule"
         android:name="com.Taskmanagement.ui.schedule.ScheduleFragment"
         android:label="@string/menu_schedule"
-        tools:layout="@layout/fragment_schedule" />
+        tools:layout="@layout/fragment_disp_tsk_base" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_all_task"
         android:name="com.Taskmanagement.ui.allTask.AllTaskFragment"
         android:label="@string/menu_all_task"
-        tools:layout="@layout/fragment_all_task" />
+        tools:layout="@layout/fragment_disp_tsk_base" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.Taskmanagement.ui.slideshow.SlideshowFragment"
+        android:id="@+id/nav_compled_task"
+        android:name="com.Taskmanagement.ui.completedTask.CompletedTaskFragment"
         android:label="@string/menu_compled_task"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_completed_task" />
 
     <fragment
         android:id="@+id/taskRegisterDialogFragment"
