--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,5 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="colorDateTimeButton">@color/gray_700</item>
         <item name="colorDateTimeText">@color/gray_200</item>
+        <item name="colorInputField">@color/purple_700</item>
+        <item name="colorInputText">@color/gray_200</item>
     </style>
 </resources>
