--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,9 @@
             android:id="@+id/nav_compled_task"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_compled_task" />
+        <item
+            android:id="@+id/nav_kpt"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_kpt" />
     </group>
 </menu>
