--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,4 +2,6 @@
 <resources>
     <attr name="colorDateTimeButton" format="color" />
     <attr name="colorDateTimeText" format="color" />
+    <attr name="colorInputField" format="color" />
+    <attr name="colorInputText" format="color" />
 </resources>
