--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,8 @@
         <!-- Customize your theme here. -->
         <item name="colorDateTimeButton">@color/gray_200</item>
         <item name="colorDateTimeText">@color/gray_700</item>
+        <item name="colorInputField">@color/purple_100</item>
+        <item name="colorInputText">@color/black</item>
     </style>
 
     <style name="Theme.TaskManagement.NoActionBar">
